# obs_AI

./: README.md  app.py  auto_answer_system.py  import_db.py  question_bank.db  question_lookup.py  questions.csv
llm-study-assistant/: .env.example  .gitignore  GEMINI.md  README.docx  README.md  it_support_knowledge_base.md  model_comparison_results.json  pyproject.toml  rag_parameter_tuning_results.json  requirements.txt  run.py  setup.sh  test.txt  test_accurate_parser.py  test_cases.md  test_complete_workflow.py  test_comprehensive_rag.py  test_fixed_workflow.py  test_frontend_display.py  test_improved_parser.py  test_knowledge_document.md  test_offline_rag.py  test_optimized_prompts.py  test_qa_parser.py  test_rag_comparison.py  test_rag_functionality.py  test_rag_three_way.py  test_rag_video.py  test_rag_video_updated.py  test_video_processing.py
llm-study-assistant/.gemini/: settings.json
llm-study-assistant/docs/: deployment.md  local_ai_assistant_plan.md  model_and_rag_test_analysis.md  model_connection_issue_resolution.md  model_download_optimization.md
llm-study-assistant/frontend/: index.html
llm-study-assistant/logs/: TODO.md  development_log.md
llm-study-assistant/scripts/: comprehensive_optimization_test.py  download_model.sh  model_comparison_test.py  rag_parameter_tuning.py  run_automated_tests.sh  run_comparison_test.sh  run_comprehensive_test.sh  run_optimized_test.sh  run_three_way_test.sh  simple_prompt_test.py  start_ollama.sh  start_server.sh  test_qa_ability.py  verify_config.py
llm-study-assistant/src/assistant/: main.py
(+28 files in other folders)
